sonic API request for url file input working, need to work out uploads